--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/build webgl.loader.js";
+      var loaderUrl = buildUrl + "/build web.loader.js";
       var config = {
-        dataUrl: buildUrl + "/build webgl.data.gz",
-        frameworkUrl: buildUrl + "/build webgl.framework.js.gz",
-        codeUrl: buildUrl + "/build webgl.wasm.gz",
+        dataUrl: buildUrl + "/build web.data.gz",
+        frameworkUrl: buildUrl + "/build web.framework.js.gz",
+        codeUrl: buildUrl + "/build web.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "challenge_2",
